--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,21 +21,31 @@
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="2" >
+            android:layout_weight="2"
+            android:weightSum="1">
 
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/string_run_progressar"
                 android:id="@+id/button1"
-                android:layout_gravity="center_horizontal"/>
+                android:layout_marginTop="0dp" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Reset"
+                android:id="@+id/button2"
+                android:layout_marginTop="0dp" />
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/ivFan_pic"
-                android:layout_gravity="center_horizontal"
-                android:src="@drawable/fan_pic"/>
+                android:src="@drawable/fan_pic"
+                android:contentDescription="..."
+                />
+
         </LinearLayout>
 
         <LinearLayout
@@ -43,7 +53,7 @@
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1" >
+            android:layout_weight="2" >
 
             <LinearLayout
                 android:id="@+id/Layout_ProgressArea"
@@ -59,16 +69,45 @@
                     android:layout_weight="1">
 
                     <ProgressBar
+                        style="?android:attr/progressBarStyleLarge"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:id="@+id/progressBar1"
-                        style="@android:style/Widget.ProgressBar.Large" />
+                        android:drawable="@drawable/custom_indeterminate_progressbar"  />
 
                     <ProgressBar
                         style="?android:attr/progressBarStyleHorizontal"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:id="@+id/progressBar2" />
+
+                    <ProgressBar
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        style="?android:attr/progressBarStyleHorizontal"
+                        android:progressDrawable="@drawable/custom_progressbar"
+                        android:id="@+id/progressBar3"
+                        android:max="100"
+                        android:indeterminate="false"/>
+
+                    <ProgressBar
+                        style="?android:attr/progressBarStyleHorizontal"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/progressBar4"
+                        android:max="100"
+                        android:progress="0"
+                        android:secondaryProgress="0"
+                        android:indeterminate="false"
+                        android:progressDrawable="@drawable/custom_progressbar2" />
+
+                    <ProgressBar
+                        style="?android:attr/progressBarStyleHorizontal"
+                        android:layout_width="60dip"
+                        android:layout_height="60dip"
+                        android:id="@+id/progressBar5"
+                        android:progressDrawable="@drawable/custom_progressbar3" />
+
                 </LinearLayout>
 
                 <LinearLayout
@@ -81,7 +120,7 @@
                     <com.dygame.myasynctaskprogressbarsample.CustomProgressBar
                         android:layout_width="80dip"
                         android:layout_height="80dip"
-                        android:id="@+id/progressBar3"
+                        android:id="@+id/progressBar11"
                         android_custom:roundColor="#D1D1D1"
                         android_custom:roundProgressColor="#E272F2"
                         android_custom:textColor="#9A32CD"
@@ -92,10 +131,12 @@
                     <com.dygame.myasynctaskprogressbarsample.CustomLoadingBar
                         style="?android:attr/progressBarStyleHorizontal"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/progressBar4" />
+                        android:layout_height="80dip"
+                        android:id="@+id/progressBar12" />
+
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
+
 </RelativeLayout>
